--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/cotizacion/cotizacion.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/cotizacion/cotizacion.component.html
@@ -1,8 +1,8 @@
 <div [@fadeInOut]>
     <br />
-    <div class="row pt-1 mb-3">
-        <div>
-            <h1 class="h2">Cotizaciones</h1>
+    <div class="pt-1 mb-1">
+        <div class="row d-flex align-items-center">
+            <h2>Cotizaciones</h2>
         </div>
     </div>
     <div>
@@ -43,7 +43,7 @@
         <hr />
         <h6>No se encontraron registros</h6>
     </div>
-    
+
     <div *ngIf="lcots.cotizaciones && lcots.cotizaciones.length > 0" class="table-container box-shadow fade-in-container" #tbcotizaciones>
         <table class="table table-striped table-responsive">
             <thead class="sticky-top">
@@ -80,7 +80,7 @@
             </thead>
             <tbody>
                 <tr *ngFor="let cot of lcots.cotizaciones">
-                    <td>
+                    <td class="col-10 col-md-9">
                         <div class="row d-flex align-items-center">
                             <div class="col-md-1 col-sm-6 col-2">
                                 <span class="badge d-md-none">Id:</span>
@@ -96,11 +96,11 @@
                                 <span class="badge d-md-none">Total:</span>
                                 <div class="ms-2">${{cot.total | number: '1.2'}}</div>
                             </div>
-                            <div class="col-md-2 col-sm-6 col-4 ">
+                            <div class="col-md-2 col-sm-6 col-5 ">
                                 <span class="badge d-md-none">Fecha Alta:</span>
                                 <div class="ms-2">{{ cot.fechaAlta | date: 'dd-MM-yyyy' }}</div>
                             </div>
-                            <div class="col-md-2 col-sm-6 col-4">
+                            <div class="col-md-2 col-sm-6 col-3">
                                 <span class="badge d-md-none">Vigencia:</span>
                                 <div class="ms-2 ">{{ cot.diasVigencia }} Dias</div>
                             </div>
@@ -110,10 +110,10 @@
                             </div>
                         </div>
                     </td>
-                    <td class="text-center">
+                    <td class="text-center col-2 col-md-3">
                         <button type="button" class="btn btn-sm btn-outline-primary" [routerLink]="['/exclusivo/resumen/' + cot.idCotizacion]" data-bs-toggle="tooltip" title="Detalle"><i class="fa-solid fa-search-dollar fa-2x"></i></button>
                         <button *ngIf="cot.idEstatusCotizacion == 1" type="button" class="btn btn-sm btn-outline-success" (click)="editar(cot.idCotizacion,cot.servicio, cot.polizaCumplimiento)" data-bs-toggle="tooltip" title="Editar tipo de servicio"><i class="fa-solid fa-pencil fa-2x"></i></button>
-                        <button *ngIf="cot.idEstatusCotizacion == 1" id="statusButton" (click)="openCerrarCotizacion(cot.idCotizacion)" class="toggle-btn {{ cot.idEstatusCotizacion === 1 ? 'active' : '' }}" data-bs-toggle="tooltip" title="Desactivar cotización" >{{ cot.idEstatusCotizacion === 1 ? 'Cerrar' : 'Activar' }}</button>
+                        <button *ngIf="cot.idEstatusCotizacion == 1" id="statusButton" (click)="openCerrarCotizacion(cot.idCotizacion)" class="toggle-btn {{ cot.idEstatusCotizacion === 1 ? 'active' : '' }}" data-bs-toggle="tooltip" title="Desactivar cotización">{{ cot.idEstatusCotizacion === 1 ? 'Cerrar' : 'Activar' }}</button>
                         <!--<button id="statusButton" (click)="openValida('cambiarEstatusCotizacion','¿Est\u00E1 seguro que desea cambiar el estatus de la cotizaci\u00F3n con ID: ' + cot.idCotizacion + '?',cot.idCotizacion, cot.idEstatusCotizacion)" class="toggle-btn {{ cot.idEstatusCotizacion === 1 ? 'active' : '' }}" data-bs-toggle="tooltip" title="Cambiar estatus">{{ cot.idEstatusCotizacion === 1 ? 'Activa' : 'Inactiva' }}</button>-->
                         <!--<button *ngIf="cot.idEstatusCotizacion == 3" type="button" (click)="openValida('eliminarCotizacion','¿Est\u00E1 seguro que desea eliminar la cotizaci\u00F3n con ID: ' + cot.idCotizacion + '?', cot.idCotizacion, cot.idEstatusCotizacion)" class="btn btn-sm btn-outline-danger" data-bs-toggle="tooltip" title="Eliminar"><i class="fa-solid fa-times fa-2x"></i></button>-->
                     </td>
