--- a/SistemaVentasBatia/ClientApp/src/styles.css
+++ b/SistemaVentasBatia/ClientApp/src/styles.css
@@ -1,5 +1,8 @@
 ﻿@import "~@fortawesome/fontawesome-free/css/all.css";
-
+.password-input {
+    -webkit-text-security: disc; /* Para navegadores basados en WebKit como Safari y Chrome */
+    text-security: disc; /* Para otros navegadores que soporten text-security */
+}
 a {
     color: #0366d6;
 }
