--- a/SistemaVentasBatia/ClientApp/src/app/widgets/puesto/puesto.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/puesto/puesto.widget.html
@@ -226,6 +226,22 @@
                                     </div>
                                 </div>
                             </div>
+                            <br />
+                            <h5>Productos</h5>
+                            <hr />
+                            <div class="row">
+                                <div class="col-sm-4 col-md-4 col-12 align-content-center align-items-center mb-3">
+                                    <div class="form-check">
+                                        <label class="form-check-label">
+                                            Incluye materiales precargados
+                                            <input class="form-check-input" type="checkbox" [value]="model.incluyeMaterial" [(ngModel)]="model.incluyeMaterial" id="incluyeMaterial" />
+                                            <span class="input-group-addon" data-toggle="tooltip" data-placement="top" title="Agrega automaticamente los materiales preconfigurados para el puesto seleccionado">
+                                                <i class="fa fa-info-circle"></i>
+                                            </span>
+                                        </label><br />
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
