--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/cotizacion/nuevo/nuevo.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/cotizacion/nuevo/nuevo.component.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div class="modal fade" id="modalAgregarCotizacion" data-bs-backdrop="static">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-dialog modal-xl modal-dialog-centered">
             <div class="modal-content">
                 <!-- Modal Header -->
                 <div class="modal-header">
@@ -71,14 +71,14 @@
                                 </div>
                                 <span *ngIf="ferr('NombreContacto')" class="text-danger">{{ terr('NombreContacto') }}</span>
                             </div>
-                            <div class="col-md-4 col-sm-12 mb-3">
+                            <div class="col-md-3 col-sm-12 mb-3">
                                 <div class="form-floating">
                                     <input type="text" class="form-control" [(ngModel)]="modelp.emailContacto" id="txtEmailContacto">
                                     <label for="txtEmailContacto">Email Contacto</label>
                                 </div>
                                 <span *ngIf="ferr('EmailContacto')" class="text-danger">{{ terr('EmailContacto') }}</span>
                             </div>
-                            <div class="col-md-4 col-sm-12 col-6 mb-3">
+                            <div class="col-md-2 col-sm-12 col-6 mb-3">
                                 <div class="form-floating">
                                     <input type="text" class="form-control" [(ngModel)]="modelp.numeroContacto" id="txtNumeroContacto">
                                     <label for="txtNumeroContacto">Tel. Contacto</label>
@@ -91,6 +91,16 @@
                                     <label for="txtExtension">Extensión</label>
                                 </div>
                                 <span *ngIf="ferr('ExtContacto')" class="text-danger">{{ terr('ExtContacto') }}</span>
+                            </div>
+                            <div class="col-sm-12 col-md-5 col-12 mb-3">
+                                <div class="form-floating">
+                                    <select class="form-select" aria-label="IdPuesto" [(ngModel)]="modelp.idTipoIndustria" id="slTipoIndustria">
+                                        <option value=0>Seleccione...</option>
+                                        <option *ngFor="let p of indust" [ngValue]="p.id">{{ p.descripcion }}</option>
+                                    </select>
+                                    <label for="slTipoIndustria">Tipo de industria</label>
+                                </div>
+                                <span *ngIf="ferr('IdTipoIndustria')" class="text-danger">{{ terr('IdTipoIndustria') }}</span>
                             </div>
                         </div>
                         <br *ngIf="agregarTipo == 2" />
