--- a/SistemaVentasBatia/ClientApp/src/app/widgets/confirmacion/confirmacion.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/confirmacion/confirmacion.widget.html
@@ -12,7 +12,10 @@
                 </div>
                 <!-- Modal body -->
                 <div class="modal-body justify-content-center text-center">
-                    {{ mensaje }}
+                    <i class="fa-solid fa-circle-exclamation"></i> {{ mensaje }}
+                </div>
+                <div class="modal-body justify-content-center text-center">
+                   ¿Desea continuar?
                 </div>
                 <!-- Modal footer -->
                 <div class="modal-footer justify-content-center text-center">
