--- a/SistemaVentasBatia/ClientApp/src/app/widgets/puesto/puesto.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/puesto/puesto.widget.html
@@ -233,7 +233,7 @@
                                 <div class="col-sm-4 col-md-4 col-12 align-content-center align-items-center mb-3">
                                     <div class="form-check">
                                         <label class="form-check-label">
-                                            Incluye materiales precargados
+                                            Incluir productos precargados
                                             <input class="form-check-input" type="checkbox" [value]="model.incluyeMaterial" [(ngModel)]="model.incluyeMaterial" id="incluyeMaterial" />
                                             <span class="input-group-addon" data-toggle="tooltip" data-placement="top" title="Agrega automaticamente los materiales preconfigurados para el puesto seleccionado">
                                                 <i class="fa fa-info-circle"></i>
