--- a/SistemaVentasBatia/ClientApp/src/styles.css
+++ b/SistemaVentasBatia/ClientApp/src/styles.css
@@ -6,7 +6,7 @@
 a {
     color: #0366d6;
 }
-
+/* CAMBIO PARA QUE SE NOTE EL NUEVO HASH DE PROD ASDASDASDADWDDADADWDAWDAWDWADDAWD*/
 .btn-primary {
     color: #fff;
     background-color: #1b6ec2;
